tmux: make colors neutral

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,30 +49,20 @@ bind _ split-window -v
 
 set-option -g base-index 1
 set-option -g set-titles on
-set-option -g visual-activity on
 set-window-option -g mode-keys vi
 #set-window-option -g automatic-rename
 set-window-option -g monitor-activity on
 set-window-option -g aggressive-resize on
+# set-option -g visual-activity on
 set-option -g visual-activity off
 set-option -g set-clipboard on
 set-option -g allow-passthrough on
 
-set-option -g status-bg colour35
-set-option -g status-fg colour236
-
-# For tmux 2.8 or earlier
-# set-option -g status-left-fg colour194
-# set-option -g status-left-attr bright
-# set-option -g status-right-fg colour191
-# set-window-option -g window-status-current-fg white
-# set-window-option -g window-status-current-attr bright
-# set-window-option -g window-status-current-bg colour161
-
-# For tmux 2.9 or later
-set-option -g status-left-style fg=colour194,bright
-set-option -g status-right-style fg=colour191
-set-window-option -g window-status-current-style fg=white,bg=colour161,bright
+set-option -g status-bg 0
+set-option -g status-fg 7
+set-option -g status-left-style fg=0,bright
+set-option -g status-right-style fg=4
+set-window-option -g window-status-current-style bg=1,fg=colour255,bright
 
 set-option -g history-limit 5000
 
