--- a/tmux.conf
+++ b/tmux.conf
@@ -58,6 +58,7 @@ set-option -g visual-activity off
 set-option -g set-clipboard on
 set-option -g allow-passthrough on
 
+set-option -g status-left-length 20
 set-option -g status-bg 0
 set-option -g status-fg 7
 set-option -g status-left-style fg=0,bright
