--- a/tmux.conf
+++ b/tmux.conf
@@ -57,6 +57,7 @@ set-window-option -g aggressive-resize on
 set-option -g visual-activity off
 set-option -g set-clipboard on
 set-option -g allow-passthrough on
+set-option -g update-environment -r
 
 set-option -g status-left-length 20
 set-option -g status-bg 0
