tmux: Support Shift+Enter in tmux panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,13 @@ set -g focus-events on
 # Let function keys to work
 setw -g xterm-keys on
 
+# Enable extended key sequences (Shift+Enter, Ctrl+Enter, etc.) for apps inside tmux
+# "on": tmux recognizes extended keys (CSI u format) from outer terminal
+# bind-key explicitly forwards kitty protocol format so inner apps receive it correctly
+# (extended-keys always would convert to modifyOtherKeys format which Claude Code can't parse)
+set -g extended-keys on
+bind-key -T root S-Enter send-keys Escape "[13;2u"
+
 # Remove delays when hitting Esc + arrow keys in Vim
 set -s escape-time 0
 
